# tonic_broadcast

./: Cargo.toml  README.md  build.rs
proto/v1/: service.proto
src/: client.rs  main.rs  server.rs
src/cmd/: client.rs  server.rs
src/cmd/client/: client.rs  mod.rs  ui.rs
tests/: lifetime_bound.rs
