[package]
name = "tonic_broadcast"
version = "0.1.0"
authors = ["Lee Fordyce <lee.fordyce1@t-mobile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cargo run --bin broadcast_server
[[bin]]
name = "broadcast_server"
path = "src/server.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
console = "0.10.0"

##
# Only necessary if using Protobuf well-known types:
prost-types = "0.6"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.2.4"
tracing-attributes = "0.1"
tracing-futures = "0.2"

[build-dependencies]
tonic-build = "0.2"
