[package]
name = "tonic_broadcast"
version = "0.1.0"
authors = ["Lee Fordyce <lee.fordyce1@t-mobile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.4.0", features = ["tls"] }
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
tower = { version = "0.4" }
# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "io-std", "signal", "once_cell"] }
once_cell = { version = "1.5.2", optional = true }
tokio-stream = { version =  "0.1", features = ["net"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
async-stream = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
console = "0.10.0"
structopt = "0.3"
clap = "3.0.0-beta.2"

tokio-util = { version = "0.6", features = ["codec"] }

# Only necessary if using Protobuf well-known types:
prost-types = "0.7"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-attributes = "0.1"
tracing-futures = "0.2"

# time
chrono = "0.4"

[build-dependencies]
tonic-build = "0.4"
